<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_margin="15dp"
        android:id="@+id/mode_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        >
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <TextView
                            android:text="@string/network_name"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            />
                <EditText
                    android:layout_weight="1"
                    android:id="@+id/subnet_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_subnet_name"
                    android:inputType="none"
                    android:maxLength="10"
                    android:minEms="3"
                    android:textSize="14sp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:text="@string/hint_net_size"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />
                <EditText
                    android:layout_weight="1"
                    android:id="@+id/number_of_hosts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_subnet_size"
                    android:inputType="number"
                    android:maxLength="10"
                    android:minEms="3"
                    android:textSize="14sp" />
                        </LinearLayout>
                </LinearLayout>
                <ImageButton
                    android:layout_weight="1"
                    android:id="@+id/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:backgroundTint="#00000000"
                    android:contentDescription="@string/delete_net_button"
                    android:src="@drawable/ic_delete_24dp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
